--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -6,14 +5,14 @@
 }
 
 body {
-  font-family: 'Areia Movediça', sans-serif;  /* Fonte Areia Movediça */
+  font-family: 'dosis', sans-serif;  
   background-color: #f8f4e4;
   color: #5d4037;
   text-align: center;
   padding: 20px;
 }
 
-/* Header com faixa roxa */
+
 .header-top {
   background-color: #ac67c7;
   padding: 30px 20px;
@@ -22,7 +21,7 @@ body {
 h1 {
   font-size: 3em;
   margin-bottom: 10px;
-  color: #5d4037;
+  color: #400a4e;
 }
 
 .avatar-container {
@@ -33,22 +32,22 @@ h1 {
 }
 
 .avatar {
-  width: 200px;  /* Aumentando a imagem do avatar */
-  height: 200px; /* Aumentando a imagem do avatar */
+  width: 200px;  
+  height: 200px;
   object-fit: cover;
   border-radius: 50%;
   border: 5px solid hsl(60, 32%, 89%);
 }
 
-/* Introdução */
+
 .intro {
-  font-size: 1.5em;
+  font-size: 1.4em;
   max-width: 800px;
   margin: 20px auto 40px auto;
   line-height: 1.6;
 }
 
-/* Seções principais */
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
@@ -61,10 +60,10 @@ section {
 h2 {
   font-size: 2.5em;
   margin-bottom: 20px;
-  color: #8a469c;
+  color: #a25bb6;
 }
 
-/* Habilidades */
+
 .habilidades p {
   font-size: 1.5em;
   max-width: 800px;
@@ -72,7 +71,7 @@ h2 {
   line-height: 1.6;
 }
 
-/* Cards de projetos */
+
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -81,8 +80,8 @@ h2 {
 }
 
 .card {
-  background-color: #e6c0fc;
-  border: 2px solid #dc96e6;
+  background-color: #f1cde7;
+  border: 2px solid #eca7ca;
   border-radius: 10px;
   padding: 20px;
   width: 250px;
@@ -99,16 +98,22 @@ h2 {
   font-size: 1.5em;
   color: #712279;
   margin-bottom: 10px;
+  min-height: 60px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  object-position: center center;
   border-radius: 5px;
 }
 
-/* Modal */
+
 .modal {
   display: none;
   position: fixed;
@@ -121,7 +126,7 @@ h2 {
 }
 
 .modal-content {
-  background-color: #f1e9ce;
+  background-color: #f0ead6;
   margin: 10% auto;
   padding: 20px;
   width: 80%;
@@ -133,6 +138,7 @@ h2 {
 
 .modal-content h2 {
   color: #76218d;
+  font-size: 1.8em;
 }
 
 .close {
@@ -149,7 +155,7 @@ h2 {
   color: #000;
 }
 
-/* Footer */
+
 footer {
   background-color: #e497ec;
   padding: 20px;
@@ -165,4 +171,10 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
+}
+
+.modal-content p {
+  font-size: 1.3em;
+  line-height: 1.6;
+  color: #5d4037;
 }
